--- a/libs/dh/globalization/configuration-watt-translation/project.json
+++ b/libs/dh/globalization/configuration-watt-translation/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/globalization/configuration-watt-translation/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:globalization", "type:configuration"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -15,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:globalization", "type:configuration"]
+  }
 }
