--- a/libs/dh/shared/data-access-graphql/project.json
+++ b/libs/dh/shared/data-access-graphql/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/shared/data-access-graphql/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:shared", "type:data-access"],
   "implicitDependencies": ["api-dh"],
   "targets": {
     "test": {
@@ -16,6 +17,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:shared", "type:data-access"]
+  }
 }
