--- a/libs/dh/admin/feature-user-roles/project.json
+++ b/libs/dh/admin/feature-user-roles/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/admin/feature-user-roles/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:admin", "type:feature"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -15,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:admin", "type:feature"]
+  }
 }
