--- a/libs/dh/globalization/configuration-localization/project.json
+++ b/libs/dh/globalization/configuration-localization/project.json
@@ -4,12 +4,11 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/globalization/configuration-localization/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:globalization", "type:configuration"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/libs/dh/globalization/configuration-localization"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/globalization/configuration-localization"],
       "options": {
         "jestConfig": "libs/dh/globalization/configuration-localization/jest.config.ts"
       }
@@ -17,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:globalization", "type:configuration"]
+  }
 }
