--- a/libs/dh/imbalance-prices/shell/project.json
+++ b/libs/dh/imbalance-prices/shell/project.json
@@ -4,6 +4,7 @@
   "sourceRoot": "libs/dh/imbalance-prices/shell/src",
   "prefix": "dh",
   "projectType": "library",
+  "tags": ["product:dh", "domain:imbalance-prices", "type:feature"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -16,6 +17,5 @@
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"]
     }
-  },
-  "tags": ["product:dh", "domain:imbalance-prices", "type:feature"]
+  }
 }
