--- a/libs/dh/market-participant/actors/shell/project.json
+++ b/libs/dh/market-participant/actors/shell/project.json
@@ -4,6 +4,7 @@
   "sourceRoot": "libs/dh/market-participant/actors/shell/src",
   "prefix": "dh",
   "projectType": "library",
+  "tags": ["product:dh", "domain:market-participant", "type:shell"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -16,6 +17,5 @@
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"]
     }
-  },
-  "tags": ["product:dh", "domain:market-participant", "type:shell"]
+  }
 }
