--- a/libs/dh/shared/data-access-top-bar/project.json
+++ b/libs/dh/shared/data-access-top-bar/project.json
@@ -4,12 +4,11 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/shared/data-access-top-bar/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:shared", "type:data-access"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/libs/dh/shared/data-access-top-bar"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/data-access-top-bar"],
       "options": {
         "jestConfig": "libs/dh/shared/data-access-top-bar/jest.config.ts"
       }
@@ -17,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:shared", "type:data-access"]
+  }
 }
