--- a/libs/dh/shared/ui-validators/project.json
+++ b/libs/dh/shared/ui-validators/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/shared/ui-validators/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:shared", "type:ui"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -15,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:shared", "type:ui"]
+  }
 }
