--- a/libs/dh/shared/util-application-insights/project.json
+++ b/libs/dh/shared/util-application-insights/project.json
@@ -4,12 +4,11 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/shared/util-application-insights/src",
   "prefix": "dh",
+  "tags": ["product:dh", "scope:shared", "type:util"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/libs/dh/shared/util-application-insights"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/util-application-insights"],
       "options": {
         "jestConfig": "libs/dh/shared/util-application-insights/jest.config.ts"
       }
@@ -17,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "scope:shared", "type:util"]
+  }
 }
