--- a/libs/dh/wholesale/shell/project.json
+++ b/libs/dh/wholesale/shell/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/dh/wholesale/shell/src",
   "prefix": "dh",
+  "tags": ["product:dh", "domain:wholesale", "type:shell"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -15,6 +16,5 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  },
-  "tags": ["product:dh", "domain:wholesale", "type:shell"]
+  }
 }
