--- a/libs/eo/core/shell/project.json
+++ b/libs/eo/core/shell/project.json
@@ -4,6 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/eo/core/shell/src",
   "prefix": "eo",
+  "tags": ["product:eo", "domain:core", "type:shell"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
@@ -16,6 +17,5 @@
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"]
     }
-  },
-  "tags": ["product:eo", "domain:core", "type:shell"]
+  }
 }
