--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "//engines-comment": "Keep this in sync with '.nvmrc', and 'volta' config at the bottom of this file.",
   "engines": {
-    "node": "22.17.0",
+    "node": "22.17.1",
     "npm": "Please use Bun instead of npm to install dependencies.",
     "yarn": "Please use Bun instead of yarn to install dependencies.",
     "bun": "1.2.17"
@@ -64,20 +64,20 @@
     "review": "gh pr checkout --"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "1.17.1",
-    "@angular/animations": "20.0.3",
-    "@angular/cdk": "20.0.3",
-    "@angular/common": "20.0.3",
-    "@angular/compiler": "20.0.3",
-    "@angular/core": "20.0.3",
-    "@angular/forms": "20.0.3",
-    "@angular/material": "20.0.3",
-    "@angular/platform-browser": "20.0.3",
-    "@angular/platform-browser-dynamic": "20.0.3",
-    "@angular/platform-server": "20.0.3",
-    "@angular/router": "20.0.3",
-    "@angular/service-worker": "20.0.3",
-    "@angular/ssr": "20.0.2",
+    "@analogjs/vite-plugin-angular": "1.19.2",
+    "@angular/animations": "20.1.3",
+    "@angular/cdk": "20.1.3",
+    "@angular/common": "20.1.3",
+    "@angular/compiler": "20.1.3",
+    "@angular/core": "20.1.3",
+    "@angular/forms": "20.1.3",
+    "@angular/material": "20.1.3",
+    "@angular/platform-browser": "20.1.3",
+    "@angular/platform-browser-dynamic": "20.1.3",
+    "@angular/platform-server": "20.1.3",
+    "@angular/router": "20.1.3",
+    "@angular/service-worker": "20.1.3",
+    "@angular/ssr": "20.1.3",
     "@apollo/client": "3.13.8",
     "@azure/msal-angular": "4.0.12",
     "@azure/msal-browser": "4.12.0",
@@ -129,9 +129,9 @@
     "@angular-eslint/eslint-plugin": "20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "20.0.3",
-    "@angular/language-service": "20.0.3",
+    "@angular/cli": "20.1.3",
+    "@angular/compiler-cli": "20.1.3",
+    "@angular/language-service": "20.1.3",
     "@babel/core": "7.26.10",
     "@babel/runtime": "7.26.10",
     "@badeball/cypress-cucumber-preprocessor": "22.1.0",
@@ -150,20 +150,20 @@
     "@jsverse/transloco-optimize": "7.0.1",
     "@ngrx/eslint-plugin": "18.1.1",
     "@nx-dotnet/utils": "2.5.0",
-    "@nx/angular": "21.2.0",
-    "@nx/cypress": "21.2.0",
-    "@nx/devkit": "21.2.0",
-    "@nx/eslint": "21.2.0",
-    "@nx/eslint-plugin": "21.2.0",
-    "@nx/jest": "21.2.0",
-    "@nx/js": "21.2.0",
-    "@nx/plugin": "21.2.0",
-    "@nx/storybook": "21.2.0",
-    "@nx/vite": "21.2.0",
-    "@nx/web": "21.2.0",
-    "@nx/workspace": "21.2.0",
+    "@nx/angular": "21.3.8",
+    "@nx/cypress": "21.3.8",
+    "@nx/devkit": "21.3.8",
+    "@nx/eslint": "21.3.8",
+    "@nx/eslint-plugin": "21.3.8",
+    "@nx/jest": "21.3.8",
+    "@nx/js": "21.3.8",
+    "@nx/plugin": "21.3.8",
+    "@nx/storybook": "21.3.8",
+    "@nx/vite": "21.3.8",
+    "@nx/web": "21.3.8",
+    "@nx/workspace": "21.3.8",
     "@openapitools/openapi-generator-cli": "2.13.4",
-    "@schematics/angular": "20.0.2",
+    "@schematics/angular": "20.1.3",
     "@storybook/addon-a11y": "9.0.10",
     "@storybook/addon-docs": "9.0.10",
     "@storybook/addon-links": "9.0.10",
@@ -218,8 +218,8 @@
     "minimatch": "10.0.1",
     "msw": "2.7.3",
     "ng-mocks": "14.0.1",
-    "ng-packagr": "20.0.0",
-    "nx": "21.2.0",
+    "ng-packagr": "20.1.0",
+    "nx": "21.3.8",
     "prettier": "3.5.3",
     "semver": "7.7.1",
     "shell-quote": "1.8.2",
@@ -237,7 +237,7 @@
   },
   "volta": {
     "//node-comment": "Keep this in sync with 'engines' config at the top of the current file",
-    "node": "22.17.0",
+    "node": "22.17.1",
     "//bun-comment": "Keep this in sync with 'packageManager' property",
     "bun": "1.2.17"
   },
