--- a/libs/dh/market-participant/feature-market-participant/project.json
+++ b/libs/dh/market-participant/feature-market-participant/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "dh-market-participant-actors-feature-actors",
-  "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/dh/market-participant/actors/feature-actors/src",
+  "name": "dh-feature-market-participant",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/dh/market-participant/feature-market-participant/src",
   "prefix": "dh",
   "projectType": "library",
   "targets": {
@@ -9,7 +9,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/dh/market-participant/actors/feature-actors/jest.config.ts"
+        "jestConfig": "libs/dh/market-participant/feature-market-participant/jest.config.ts"
       }
     },
     "lint": {
