--- a/libs/dh/market-participant/feature-market-roles/tsconfig.spec.json
+++ b/libs/dh/market-participant/feature-market-roles/tsconfig.spec.json
@@ -7,5 +7,5 @@
     "types": ["jest", "node"]
   },
   "files": ["tests/test-setup.ts"],
-  "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": ["jest.config.ts", "tests/**/*.test.ts", "tests/**/*.spec.ts", "tests/**/*.d.ts"]
 }
