--- a/libs/dh/grid-areas/tsconfig.lib.json
+++ b/libs/dh/grid-areas/tsconfig.lib.json
@@ -8,5 +8,5 @@
     "types": []
   },
   "exclude": ["tests/**/*.spec.ts", "tests/test-setup.ts", "jest.config.ts", "tests/**/*.test.ts"],
-  "include": ["src/**/*.ts", "index.ts", "tests/test-setup.ts"]
+  "include": ["src/**/*.ts", "index.ts"]
 }
