--- a/libs/dh/shared/data-access-graphql/tsconfig.lib.json
+++ b/libs/dh/shared/data-access-graphql/tsconfig.lib.json
@@ -8,5 +8,5 @@
     "types": []
   },
   "exclude": ["src/test-setup.ts", "**/*.spec.ts", "jest.config.ts", "**/*.test.ts"],
-  "include": ["**/*.ts", "src/lib/graphql/get-market-participants-by-eic-function-for-dropdowns.ts"]
+  "include": ["**/*.ts"]
 }
