migrate dh-core-shell to vitest

--- a/libs/dh/core/shell/project.json
+++ b/libs/dh/core/shell/project.json
@@ -6,10 +6,10 @@
   "tags": ["product:dh", "domain:core", "type:shell"],
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/core/shell"],
       "options": {
-        "jestConfig": "libs/dh/core/shell/jest.config.ts"
+        "config": "libs/dh/core/shell/vite.config.mts"
       }
     },
     "lint": {
