--- a/libs/dh/core/shell/tsconfig.spec.json
+++ b/libs/dh/core/shell/tsconfig.spec.json
@@ -2,10 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["jest", "node"],
-    "target": "es2016"
+    "types": ["vitest/globals", "node"],
+    "target": "ES2022"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["**/*.spec.ts", "**/*.d.ts", "jest.config.ts"]
+  "include": ["**/*.spec.ts", "**/*.d.ts", "vite.config.mts"]
 }
