--- a/libs/dh/shared/feature-authorization/tsconfig.spec.json
+++ b/libs/dh/shared/feature-authorization/tsconfig.spec.json
@@ -2,9 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "module": "commonjs",
+    "module": "ESNext",
     "types": ["vitest/globals", "node"],
-    "target": "es2016"
+    "target": "es2020"
   },
   "files": ["src/test-setup.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts", "vite.config.mts"]
