--- a/libs/eo/reports/feature-overview/project.json
+++ b/libs/eo/reports/feature-overview/project.json
@@ -10,10 +10,10 @@
       "executor": "@nx/eslint:lint"
     },
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/eo/shared/utilities/jest.config.ts",
-        "passWithNoTests": true
+        "config": "libs/eo/reports/feature-overview/vite.config.mts"
       }
     }
   }
