--- a/libs/dh/metering-point/feature-overview/project.json
+++ b/libs/dh/metering-point/feature-overview/project.json
@@ -7,10 +7,10 @@
   "tags": ["product:dh", "domain:metering-point", "type:feature"],
   "targets": {
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "executor": "@nx/vite:test",
+      "outputs": ["{workspaceRoot}/coverage/libs/dh/metering-point/feature-overview"],
       "options": {
-        "jestConfig": "libs/dh/metering-point/feature-overview/jest.config.ts"
+        "config": "libs/dh/metering-point/feature-overview/vite.config.mts"
       }
     },
     "lint": {
