--- a/libs/dh/metering-point/feature-measurements/tsconfig.spec.json
+++ b/libs/dh/metering-point/feature-measurements/tsconfig.spec.json
@@ -2,10 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "module": "commonjs",
-    "target": "es2016",
-    "types": ["jest", "node"]
+    "module": "ESNext",
+    "types": ["vitest/globals", "node"],
+    "target": "es2020"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": ["src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts", "vite.config.mts"]
 }
