--- a/libs/dh/metering-point/feature-upload-measurements/project.json
+++ b/libs/dh/metering-point/feature-upload-measurements/project.json
@@ -1,6 +1,7 @@
 {
   "name": "dh-metering-point-feature-upload-measurements",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "projectType": "library",
   "sourceRoot": "libs/dh/metering-point/feature-upload-measurements/src",
   "prefix": "dh",
   "tags": ["product:dh", "domain:metering-point", "type:feature"],
