--- a/libs/dh/market-participant/feature-delegation/tsconfig.spec.json
+++ b/libs/dh/market-participant/feature-delegation/tsconfig.spec.json
@@ -6,5 +6,5 @@
     "target": "es2022"
   },
   "files": ["src/test-setup.ts"],
-  "include": ["vite.config.mts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["vitest.config.mts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
