use consistent naming of vite.config

--- a/libs/dh/shared/feature-flags/project.json
+++ b/libs/dh/shared/feature-flags/project.json
@@ -10,7 +10,7 @@
       "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/feature-flags"],
       "options": {
-        "config": "libs/dh/shared/feature-flags/vite.config.mts"
+        "configFile": "libs/dh/shared/feature-flags/vite.config.mts"
       }
     },
     "lint": {
