--- a/.github/workflows/license-check-ci.yml
+++ b/.github/workflows/license-check-ci.yml
@@ -24,7 +24,7 @@ env:
 
   # Nx Cloud
   NX_BRANCH: ${{ github.event.number }}
-  NX_RUN_GROUP: ${{ github.run_id }}
+  NX_CI_EXECUTION_ID: ${{ github.run_id }}
 
 on:
   push:
