--- a/.github/workflows/watt-ci-package.yml
+++ b/.github/workflows/watt-ci-package.yml
@@ -19,7 +19,7 @@ concurrency:
 
 env:
   NX_BRANCH: ${{ github.event.number }}
-  NX_RUN_GROUP: ${{ github.run_id }}
+  NX_CI_EXECUTION_ID: ${{ github.run_id }}
 
 on:
   pull_request:
