--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -25,7 +25,7 @@ env:
   # Nx Cloud
   NX_BRANCH: ${{ github.event.number }}
   NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
-  NX_RUN_GROUP: ${{ github.run_id }}
+  NX_CI_EXECUTION_ID: ${{ github.run_id }}
 
   # DH E2E
   # Note: Cypress automatically removes the "CYPRESS_" prefix in CI
@@ -285,9 +285,8 @@ jobs:
         if: ${{ env.is-pull-request == 'false' }}
         run: bun run test
 
-      - name: "NX self healing"
+      - name: NX self healing
         run: bun nx-cloud fix-ci
-        if: always()
 
   componentTests:
     name: Component test
