try fixing dh-shared-release-toggle in CI

--- a/libs/dh/shared/release-toggle/project.json
+++ b/libs/dh/shared/release-toggle/project.json
@@ -10,7 +10,7 @@
       "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/dh/shared/release-toggle"],
       "options": {
-        "config": "libs/dh/shared/release-toggle/vite.config.mts"
+        "configFile": "libs/dh/shared/release-toggle/vite.config.mts"
       }
     },
     "lint": {
