--- a/apps/eo/e2e-eo-landing-page/project.json
+++ b/apps/eo/e2e-eo-landing-page/project.json
@@ -16,7 +16,7 @@
         "ci": {
           "cypressConfig": "apps/eo/e2e-eo-landing-page/cypress.config.ts",
           "devServerTarget": "app-eo-landing-page:serve-static-e2e",
-          "headed": true,
+          "headed": false,
           "browser": "chrome"
         },
         "production": {
