--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -344,6 +344,7 @@
         "libs/eo/core/globalization/assets-localization/translations.ts"
       ],
       "@energinet-datahub/eo/wallet/data-access-api": ["libs/eo/wallet/data-access-api/index.ts"],
+      "@energinet-datahub/eslint-plugin-custom": ["tools/eslint-rules/src/index.ts"],
       "@energinet-datahub/gf/e2e-util-msw": ["libs/gf/msw/e2e-util-msw/index.ts"],
       "@energinet-datahub/gf/globalization/configuration-danish-locale": [
         "libs/gf/globalization/configuration-danish-locale/src/index.ts"
