feat(eslint-rules): add custom ESLint rule to disallow @if around watt-field-error components
- Introduced a new ESLint rule `no-if-around-watt-field-error` to prevent wrapping <watt-field-error> in @if statements, addressing layout shifts.
- Created necessary configuration files for Jest testing of the ESLint rules.
- Added TypeScript definitions for Angular template AST nodes to support the new rule.
- Updated package.json to include dependencies for Jest and ESLint.
- Established project structure for the ESLint rules, including test specifications and TypeScript configurations.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -187,7 +187,8 @@
       "files": ["*.component.html"],
       "extends": ["plugin:@nx/angular-template"],
       "rules": {
-        "@angular-eslint/template/prefer-self-closing-tags": ["error"]
+        "@angular-eslint/template/prefer-self-closing-tags": ["error"],
+        "@nx/workspace-no-if-around-watt-field-error": "error"
       }
     },
     {
