--- a/libs/watt/project.json
+++ b/libs/watt/project.json
@@ -10,7 +10,7 @@
       "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/watt"],
       "options": {
-        "vitestConfig": "libs/watt/vite.config.mts"
+        "vitestConfig": "libs/watt/vitest.config.mts"
       }
     },
     "lint": {
