--- a/libs/dh/esett/feature-metering-gridarea-imbalance/tsconfig.lib.json
+++ b/libs/dh/esett/feature-metering-gridarea-imbalance/tsconfig.lib.json
@@ -7,11 +7,6 @@
     "declarationMap": true,
     "types": []
   },
-  "exclude": [
-    "src/**/*.spec.ts",
-    "src/test-setup.ts",
-    "jest.config.ts",
-    "src/**/*.test.ts"
-  ],
+  "exclude": ["tests/**/*.spec.ts", "tests/test-setup.ts", "tests/**/*.test.ts"],
   "include": ["src/**/*.ts"]
 }
