--- a/libs/dh/esett/feature-metering-gridarea-imbalance/tsconfig.spec.json
+++ b/libs/dh/esett/feature-metering-gridarea-imbalance/tsconfig.spec.json
@@ -6,5 +6,5 @@
     "target": "es2022"
   },
   "files": ["tests/test-setup.ts"],
-  "include": ["vite.config.mts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "include": ["vite.config.mts", "tests/**/*.test.ts", "tests/**/*.spec.ts", "tests/**/*.d.ts"]
 }
