Refactor/use server side paging (#4631)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dzhavat Ushev <dzu@energinet.dk>

--- a/libs/dh/esett/feature-metering-gridarea-imbalance/tsconfig.spec.json
+++ b/libs/dh/esett/feature-metering-gridarea-imbalance/tsconfig.spec.json
@@ -5,6 +5,6 @@
     "types": ["vitest/globals", "node"],
     "target": "es2022"
   },
-  "files": ["src/test-setup.ts"],
-  "include": ["vite.config.mts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "files": ["tests/test-setup.ts"],
+  "include": ["vite.config.mts", "tests/**/*.test.ts", "tests/**/*.spec.ts", "tests/**/*.d.ts"]
 }
