--- a/.github/workflows/dh-healthchecks.yml
+++ b/.github/workflows/dh-healthchecks.yml
@@ -12,6 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 name: DH UI Frontend Healthchecks
+
+permissions:
+  contents: read
+
 env:
   # See https://github.com/cypress-io/cypress/issues/25357
   ELECTRON_EXTRA_LAUNCH_ARGS: --disable-gpu
