--- a/.github/workflows/license-check-ci.yml
+++ b/.github/workflows/license-check-ci.yml
@@ -13,6 +13,9 @@
 # limitations under the License.
 name: License Check CI
 
+permissions:
+  contents: read
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
