chore: add permissions to pipelines (#4637)
Co-authored-by: Admir Muric <admmu@energinet.dk>

--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -11,8 +11,14 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 name: CI orchestrator
+
+permissions:
+  checks: write
+  contents: write
+  id-token: write
+  issues: read
+  pull-requests: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
