--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -79,12 +79,7 @@
         "libs/dh/globalization/feature-language-picker/src/index.ts"
       ],
       "@energinet-datahub/dh/grid-areas": ["libs/dh/grid-areas/index.ts"],
-      "@energinet-datahub/dh/imbalance-prices/data-access-api": [
-        "libs/dh/imbalance-prices/data-access-api/src/index.ts"
-      ],
-      "@energinet-datahub/dh/imbalance-prices/shell": [
-        "libs/dh/imbalance-prices/shell/src/index.ts"
-      ],
+      "@energinet-datahub/dh/imbalance-prices": ["libs/dh/imbalance-prices/index.ts"],
       "@energinet-datahub/dh/market-participant/domain": [
         "libs/dh/market-participant/domain/index.ts"
       ],
